--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <input type="submit" id="Ubtn" style="display: none;" class="btn btn-outline-warning btn-block" value="Update" />
     </form>
 
-    <table class="table table-striped mt-5">
+    <table class="table table-striped mt-5" id="mytable">
       <thead style="display:none">
         <tr class="text-primary">
           <th>TITLE</th>
